--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </link>
 
-  <script src="../p5.js"></script>
-   <script src="path/to/p5.sound.js"></script>
+  <script src="p5.js"></script>
    <script src="p5.sound.js"></script>
   <script src="p5.sound.min.js"></script>
   <script src="sketch.js"></script>
