--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
 
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Happy Diwali</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Happy Diwali</title>
   <h1> Happy Diwali </h1>
+  <h2>
+  <a href="" class="typewrite" data-period="2000" data-type='[ "From Khushi Aguru", "From Darshan Aguru", "From Girija Aguru", "From Srinivas Aguru", "From Krishna Veni Aguru", "From Damodararao Aguru" ]'>
+    <span class="wrap"></span>
+  </a>
+</h2>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 </link>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
 
-  
+  <script src="p5.js"></script>
+   <script src="path/to/p5.sound.js"></script>
    <script src="p5.sound.js"></script>
- 
+  <script src="p5.sound.min.js"></script>
   <script src="sketch.js"></script>
   <script src="particle.js"></script>
   <script src="fireworks.js"></script>
+  <script src="typewriter.js"></script>
+  <button id="muteBtn" data-text-swap="Mute">Unmute</button>
+
 </head>
 
 <body>
@@ -26,3 +33,4 @@
 </body>
 
 </html>
+
